--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,7 +12,7 @@ jobs:
               run: pnpm start
     send:
         runs-on: ubuntu-latest
-            - uses: marshall-ku/workflows/send.yml@master
+            - uses: marshall-ku/workflows/.github/workflows/send_notification.yml@master
               secrets:
                 url: ${{ secrets.DISCORD_WEBHOOK_URI }}
             
