--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,7 +28,7 @@ jobs:
             - uses: actions/checkout@v4
             - name: Check version
               run: |
-                  PREVIOUS_VERSION=$(git show origin/main:package.json | jq -r .version)
+                  PREVIOUS_VERSION=$(git show origin/master:package.json | jq -r .version)
                   CURRENT_VERSION=$(jq -r .version package.json)
                   if [ "$PREVIOUS_VERSION" != "$CURRENT_VERSION" ]; then
                     echo "Version updated to $CURRENT_VERSION"
