--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,7 +30,7 @@ jobs:
                   fetch-depth: 2
             - name: Check version
               run: |
-                  PREVIOUS_VERSION=$(git show origin/master:package.json | jq -r .version)
+                  PREVIOUS_VERSION=$(git show HEAD~1:package.json | jq -r .version)
                   CURRENT_VERSION=$(jq -r .version package.json)
                   if [ "$PREVIOUS_VERSION" != "$CURRENT_VERSION" ]; then
                     echo "Version updated to $CURRENT_VERSION"
