--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,13 +25,9 @@ jobs:
     check-version:
         runs-on: ubuntu-latest
         steps:
-            - uses: actions/checkout@v4
-            - name: Check version
-              run: |
-                  PREVIOUS_VERSION=$(git show HEAD~1:package.json | jq -r .version)
-                  CURRENT_VERSION=$(jq -r .version package.json)
-                  if [ "$PREVIOUS_VERSION" != "$CURRENT_VERSION" ]; then
-                    echo "Version updated to $CURRENT_VERSION"
-                  else
-                    echo "Version has not been updated"
-                  fi
+            - uses: marshall-ku/workflows/check_version@master
+              id: check-version
+            - run: echo "Version updated to ${VERSION}"
+              env:
+                    VERSION=${{steps.check-version.outputs.version}}
+              if: ${{ $VERSION != '' }}
