--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,4 +30,4 @@ jobs:
             - run: echo "Version updated to ${VERSION}"
               env:
                     VERSION=${{steps.check-version.outputs.version}}
-              if: ${{ $VERSION != '' }}
+              if: ${{ steps.check-version.outputs.version != '' }}
