--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,10 +26,12 @@ jobs:
                           repo: context.repo.repo,
                           workflow_id: 'dispatch.yml',
                           ref: 'master',
-                          event_type: 'my-event-type',
-                          client_payload: {
-                              passed: false,
-                              message: 'Hi'
+                          inputs: {
+                              event_type: 'my-event-type',
+                              client_payload: {
+                                passed: false,
+                                message: 'Hi'
+                              }
                           }
                       })
 
