--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,7 +26,7 @@ jobs:
                           repo: context.repo.repo,
                           workflow_id: 'dispatch.yml',
                           ref: 'master',
-                          inputs: {
+                          event: {
                               event_type: 'my-event-type',
                               client_payload: {
                                 passed: false,
