--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,8 +18,9 @@ jobs:
         steps:
             - run: |
                   gh api /repos/marshall-ku/npm-script/dispatches \
-                  -X POST \
-                  -F event_type=my-event-type
+                  --method POST \
+                  --field event_type=my-event-type \
+                  --field client_payload='{"passed":false,"message":"Hi there"}'
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
