--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,6 +13,7 @@ jobs:
             - uses: marshall-ku/workflows/setup_pnpm@master
             - name: Run script
               run: pnpm start
+            - uses: marshall-ku/workflows/.github/workflows/test.yml@master
     trigger:
         runs-on: ubuntu-latest
         steps:
