--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -49,4 +49,6 @@ jobs:
         steps:
             - uses: marshall-ku/workflows/greeting@master
               id: greeting
+              with:
+                name: "Marshall"
             - run: echo ${{ steps.greeting.outputs.message }}
