--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -50,5 +50,5 @@ jobs:
             - uses: marshall-ku/workflows/greeting@master
               id: greeting
               with:
-                name: "Marshall"
+                name: "Marshall1"
             - run: echo ${{ steps.greeting.outputs.message }}
