--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,7 +15,8 @@ jobs:
                  OUPTUT="${OUPTUT//'%'/'%25'}"
                  OUPTUT="${OUPTUT//$'\n'/'%0A'}"
                  OUPTUT="${OUPTUT//$'\r'/'%0D'}"
-                 echo "result=$OUPTUT" >> "$GITHUB_OUTPUT"
+                 # echo "result=$OUPTUT" >> "$GITHUB_OUTPUT"
+                 echo "::set-output name=result::$MY_STRING"
             - name: Create commit comment
               if: ${{ !cancelled() }}
               uses: peter-evans/commit-comment@v3
