--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,7 +12,7 @@ jobs:
               id: check-test-result
               run: |
                  OUPTUT=$(node console.js)
-                 echo "::set-output name=result::$OUPTUT"
+                 echo "result=$OUPTUT" >> "$GITHUB_OUTPUT"
             - name: Create commit comment
               if: ${{ !cancelled() }}
               uses: peter-evans/commit-comment@v3
