--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -60,7 +60,7 @@ jobs:
         with:
             succeed: true
             message: "Testing workflow"
-            title: "Hello there!"
+            title: "Hello there"
             color: "3108265"
         # secrets:
         #     url: ${{ secrets.DISCORD_WEBHOOK_URI }}
